--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body class="bodyStyle">
     <div id="header" class="mainHeader">
       <hr />
-      <div class="center">Caf&eacute;</div>
+      <div class="center">Fergus's Caf&eacute;</div>
     </div>
     <br />
 
